# nvtray

./: .gitignore  PKGBUILD  README.md  README.zh-CN.md  i18n.py  install.sh  io.github.anlorsp.nvtray.policy  io.github.chenxiex.nvtray.policy  nvtray.py  nvtray.service  nvtray_eject_helper.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: devcontainer-build-and-push.yml
locales/zh_CN/LC_MESSAGES/: nvtray.mo  nvtray.po
packaging/arch/: .SRCINFO  PKGBUILD
src/nvtray/: __init__.py  app.py  eject_helper.py  i18n.py
src/nvtray/locales/zh_CN/LC_MESSAGES/: nvtray.mo  nvtray.po
