[project]
name = "nvtray"
version = "0.1.0"
description = "Linux tray application for ejecting NVIDIA GPU from PCI bus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbus-python>=1.4.0",
    "notify2>=0.3.1",
    "pygobject>=3.56.0",
    "pyudev>=0.24.4",
]

[dependency-groups]
dev = [
    "pygobject-stubs>=2.16.0",
]
